Added E Visa Update 5

--- a/evisa.html
+++ b/evisa.html
@@ -166,6 +166,15 @@
     <!--End Main Header -->
 
     <!-- Coming Soon -->
+    <section class="page-title" style="background-image:url(images/background/5.jpg);">
+        <div class="auto-container">
+            <h1>E Visa</h1>
+            <ul class="bread-crumb clearfix">
+                <li><a href="evisa.html">Home</a></li>
+                <li>E Visa</li>
+            </ul>
+        </div>
+    </section>
     <section class="coming-soon">
         <div class="anim-icons full-width">
             <span class="icon icon-circle-blue wow fadeIn"></span>
@@ -175,6 +184,7 @@
         </div>
 
         <div class="auto-container">
+            
             <div class="content">
                 <!--                <div class="logo"><a href="index.html"><img style="width:50%;" src="images/logo_image.png" alt=""></a></div>-->
                 <div id="c4988" class="csc-default"><h2><b>Information for Getting Indian Visa</b><br><br></h2><div class="csc-textpic-text"><p>SSIC 2021 participants should apply for a conference visa to attend the conference in Mumbai, India. Families of conference participants should apply for a tourist visa. To get accurate information about how to apply for the above visas please check the websites of the Indian Consulates in your respective countries as the application process may vary between countries.
@@ -186,7 +196,7 @@
                     <div class="cs-countdown clearfix" data-countdown="12/1/2019 05:06:59"></div>
                 </div>
                 <!--Emailed Form-->
-                <div class="emailed-form">
+                <!-- <div class="emailed-form">
                     <form method="post" action="contact.html">
                         <div class="form-group">
                             <input type="email" name="email" value="" placeholder="Enter your email" required="">
@@ -202,7 +212,7 @@
                         <!--                        <li><a href="#"><span class="fab fa-behance"></span></a></li>-->
                         <!--                        <li><a href="#"><span class="fab fa-dribbble"></span></a></li>-->
                     </ul>
-                </div>
+                </div> 
             </div>
         </div>
     </section>
@@ -283,39 +293,7 @@
                             </div>
 
                             <!--Footer Column-->
-                            <div class="footer-column col-lg-6 col-md-6 col-sm-12">
-                                <!--Footer Column-->
-                                <div class="footer-widget instagram-widget">
-                                    <h2 class="widget-title">Instagram Gallery</h2>
-                                    <div class="widget-content">
-                                        <div class="outer clearfix">
-                                            <figure class="image">
-                                                <a href="images/ssic2017/1.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/1.png" alt=""></a>
-                                            </figure>
-
-                                            <figure class="image">
-                                                <a href="images/ssic2017/2.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/2.png" alt=""></a>
-                                            </figure>
-
-                                            <figure class="image">
-                                                <a href="images/ssic2017/3.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/3.png" alt=""></a>
-                                            </figure>
-
-                                            <figure class="image">
-                                                <a href="images/ssic2017/4.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/4.png" alt=""></a>
-                                            </figure>
-
-                                            <figure class="image">
-                                                <a href="images/ssic2017/5.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/5.png" alt=""></a>
-                                            </figure>
-
-                                            <figure class="image">
-                                                <a href="images/ssic2017/6.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/6.png" alt=""></a>
-                                            </figure>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
