--- a/evisa.html
+++ b/evisa.html
@@ -293,7 +293,39 @@
                             </div>
 
                             <!--Footer Column-->
-                            
+                            <div class="footer-column col-lg-6 col-md-6 col-sm-12">
+                                <!--Footer Column-->
+                                <div class="footer-widget instagram-widget">
+                                    <h2 class="widget-title">Instagram Gallery</h2>
+                                    <div class="widget-content">
+                                        <div class="outer clearfix">
+                                            <figure class="image">
+                                                <a href="images/ssic2017/1.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/1.png" alt=""></a>
+                                            </figure>
+
+                                            <figure class="image">
+                                                <a href="images/ssic2017/2.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/2.png" alt=""></a>
+                                            </figure>
+
+                                            <figure class="image">
+                                                <a href="images/ssic2017/3.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/3.png" alt=""></a>
+                                            </figure>
+
+                                            <figure class="image">
+                                                <a href="images/ssic2017/4.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/4.png" alt=""></a>
+                                            </figure>
+
+                                            <figure class="image">
+                                                <a href="images/ssic2017/5.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/5.png" alt=""></a>
+                                            </figure>
+
+                                            <figure class="image">
+                                                <a href="images/ssic2017/6.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/6.png" alt=""></a>
+                                            </figure>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
