data entry in ssic 2019 page and evisa page chanegs

--- a/ssic2019.html
+++ b/ssic2019.html
@@ -193,7 +193,7 @@
                     <div class="inner-column">
                         <div class="sec-title">
                             <span class="title">2nd INTERNATIONAL EVENT</span>
-                            <h2>SMART SYSTEMS, INNOVATION AND COMPUTING (SSIC-2019)</h2>
+                            <h2>SMART SYSTEMS, INNOVATION AND COMPUTING (SSIC-2019) 18-20 Jan 2019</h2>
                             <div class="text">Manipal University Jaipur has successfully organized many events in the past and proudly hosted the 2nd edition of International Conference on Smart IoT Systems: Innovation in Computing (SSIC).
                                 SSIC focuses on two main areas i.e. Smart Systems and IoT Innovations which includes applications for smart cities, smart grid, smart health-care, social computing and privacy challenges with their theory, specification, design, performance, and system building. It is an international forum for researchers, engineers, academicians as well as industrial professionals from all over the world to share and publicize their research work and development activities in the field of Smart Systems, Innovations and Commuting.
                             </div>
@@ -238,12 +238,13 @@
                     <p class="p3"><font size="6"><span class="s1"><strong>PRE-CONFERENCE EVENT DETAILS</strong></span></font></p>
 
                     <hr width="20%" />
-                    <p class="p4"><span class="s1"><strong>TUTORIALS </strong></span></p>
-                    <span class="s1">Cloud Computing- Dr. Gaurav Somani, Central University Rajasthan</span><br />
+                    <p class="p4"><span class="s1"><strong>Workshop on 5G and Software Defined Networking (SDN)<br> 16-18 Jan 2019 <br> Speaker </strong></span></p>
+
+                    <span class="s1">Prof. Madhusanka Liyanage Assistant Professor at University College Dublin</span><br />
                     <br />
-                    <span class="s1">IOT hands-on practices - Forsk Labs</span><br />
-                    <br />
+                    
                     &nbsp;
+
                     <p class="p4"><span class="s1"><strong>POSTER &amp; Ph.D. FORUM </strong></span></p>
                     <span class="s1">Ph.D. Forum</span><br />
                     <br />
@@ -254,14 +255,21 @@
                     <span class="s1">Poster Presentation (Theme - Computing)</span><br />
                     <br />
                     &nbsp;
+
+                    <p class="p4"><span class="s1"><strong>Ideathon</strong></span></p>
+                    
+                    <span class="s1">Students from various colleges and universities to showcase their ideas on a respected platform.</span><br />
+                    <br />
+                    <br>
+
                     <p class="p7"><font size="6"><span class="s1"><strong>CONFERENCE EVENT DETAILS</strong></span></font></p>
 
                     <hr width="20%" />
                     <p class="p8"><span class="s1"><strong>KEYNOTE TALKS: (INAUGRATION) </strong></span></p>
-                    <span class="s1">Mr. Seetha Rama Krishna Nookala, Director - Asia Pacific &amp; Japan, HPC, Intel, corporation</span><br />
+                    <span class="s1">Shri M.M. Tiwari, Director IT Election Commission of India</span><br />
                     <br />
-                    <span class="s1">Prof. Arun K. Somani, General Chair, SSIC-2017, Professor and Jerry R. Junkins Endowed Chair Professor of Electrical and Computer Engineering at Iowa State University</span><br />
-                    &nbsp;
+                    <!-- <span class="s1">Prof. Arun K. Somani, General Chair, SSIC-2017, Professor and Jerry R. Junkins Endowed Chair Professor of Electrical and Computer Engineering at Iowa State University</span><br />
+                    &nbsp; -->
                     <p class="p8"><span class="s1"><strong>KEYNOTE TALKS: (ACADEMIC EXPERTS)</strong></span></p>
 
                     <table cellpadding="0" cellspacing="0" class="t1">
@@ -285,15 +293,15 @@
                                 <p class="p11"><span class="s1">1.</span></p>
                             </td>
                             <td class="td6" valign="top">
-                                <p class="p11"><span class="s1">Prof. S. K. Pal</span></p>
+                                <p class="p11"><span class="s1">Dr. Priyadarsi Nanda</span></p>
                             </td>
                             <td class="td7" valign="top">
-                                <p class="p11"><span class="s1">Distinguished Scientist and former Director of the Indian Statistical Institute, Kolkata, India</span></p>
+                                <p class="p11"><span class="s1">Senior Lecturer at University of Technology Sydney, Australia</span></p>
 
                                 <p class="p12"></p>
                             </td>
                             <td class="td8" valign="top">
-                                <p class="p11"><span class="s1">&ldquo;Granular Mining and Rough-fuzzy Computing: Data to knowledge and Big data issues&rdquo;</span></p>
+                                <p class="p11"><span class="s1">Security Aspect of IOT</span></p>
 
                                 <p class="p12"></p>
                             </td>
@@ -303,12 +311,13 @@
                                 <p class="p11"><span class="s1">2.</span></p>
                             </td>
                             <td class="td10" valign="top">
-                                <p class="p11"><span class="s1">Prof. C. Patvardhan</span></p>
+                                <p class="p11"><span class="s1">Dr.Swagatam Das</span></p>
                             </td>
                             <td class="td11" valign="top">
-                                <p class="p11"><span class="s1">Professor, Electrical Engineering Department, Dayalbagh Educational Institute (Deemed University)</span></p>
+                                <p class="p11"><span class="s1">Associate Professor at Indian Statistical Institute, Kolkata</span></p>
                             </td>
                             <td class="td12" valign="top">
+                                <p class="p11"><span class="s1">Need of Deep learning and fast paced advancements</span></p>
                                 <p class="p12"></p>
                             </td>
                         </tr>
@@ -317,17 +326,15 @@
                                 <p class="p11"><span class="s1">3.</span></p>
                             </td>
                             <td class="td14" valign="top">
-                                <p class="p11"><span class="s1">Prof. K. Subramanian</span></p>
+                                <p class="p11"><span class="s1">Prof. Arun K. Somani</span></p>
                             </td>
                             <td class="td15" valign="top">
-                                <p class="p11"><span class="s1">Chair, IEEE Delhi Section</span></p>
+                                <p class="p11"><span class="s1">Distinguished Professor & Associate Dean for Research, College of Engineering, IOWA University</span></p>
 
                                 <p class="p12"></p>
                             </td>
                             <td class="td16" valign="top">
-                                <p class="p11"><span class="s1">&ldquo;Innovation in Data Science/Engineering </span></p>
-
-                                <p class="p11"><span class="s1">Analytics Fuels Growth of a Nation&rdquo;</span></p>
+                                <p class="p11"><span class="s1">Big Data Storage </span></p>
                             </td>
                         </tr>
                         <tr>
@@ -335,13 +342,13 @@
                                 <p class="p11"><span class="s1">4.</span></p>
                             </td>
                             <td class="td14" valign="top">
-                                <p class="p11"><span class="s1">Prof. Ashvini Chaturvedi</span></p>
+                                <p class="p11"><span class="s1">Robin Ram Mohan Doss</span></p>
                             </td>
                             <td class="td15" valign="top">
-                                <p class="p11"><span class="s1">Associate Professor, Department of ECE, NIT Suratkal</span></p>
+                                <p class="p11"><span class="s1">Deputy Head of School School of Info Technology Deakin University</span></p>
                             </td>
                             <td class="td16" valign="top">
-                                <p class="p11"><span class="s1">&ldquo;Probabilistic Models and Game Theory Strategies for Wireless Sensor Networks &ldquo;</span></p>
+                                <p class="p11"><span class="s1">The Security and Privacy in IoT- an Auto ID perspective </span></p>
 
                                 <p class="p12"></p>
                             </td>
@@ -351,13 +358,13 @@
                                 <p class="p11"><span class="s1">5.</span></p>
                             </td>
                             <td class="td10" valign="top">
-                                <p class="p11"><span class="s1">Prof. M. S. Gaur</span></p>
+                                <p class="p11"><span class="s1">Prof. Raj Jain</span></p>
                             </td>
                             <td class="td11" valign="top">
-                                <p class="p11"><span class="s1">Professor, MNIT Jaipur</span></p>
+                                <p class="p11"><span class="s1">Professor of Computer Science and Engineering Washington University School of Engineering and Applied Science at Washington University, St. Louis, Missouri.</span></p>
                             </td>
                             <td class="td12" valign="top">
-                                <p class="p11"><span class="s1">&quot;How secure is your Android App?&quot; </span></p>
+                                <p class="p11"><span class="s1">Advancement of IoT Technology</span></p>
 
                                 <p class="p12"></p>
                             </td>
@@ -367,13 +374,13 @@
                                 <p class="p11"><span class="s1">6.</span></p>
                             </td>
                             <td class="td14" valign="top">
-                                <p class="p11"><span class="s1">Dr. Rajesh Kumar</span></p>
+                                <p class="p11"><span class="s1">Dr. Gaurav Trivedi</span></p>
                             </td>
                             <td class="td15" valign="top">
-                                <p class="p11"><span class="s1">MNIT Jaipur</span></p>
+                                <p class="p11"><span class="s1">Associate Professor at EEE Department, IIT Guwahat</span></p>
                             </td>
                             <td class="td16" valign="top">
-                                <p class="p11"><span class="s1">&ldquo;Termite Spatial Correlation based Particle Swarm Optimization Algorithm &ldquo;</span></p>
+                                <p class="p11"><span class="s1">Era of quantum computing and IoT security</span></p>
 
                                 <p class="p13"></p>
                             </td>
@@ -397,18 +404,24 @@
                             <td class="td18" valign="top">
                                 <p class="p10"><span class="s1"><strong>Position</strong></span></p>
                             </td>
+                            <td class="td4" valign="top">
+                                <p class="p10"><span class="s1"><strong>Title of Talk</strong></span></p>
+                            </td>
                         </tr>
                         <tr>
                             <td class="td9" valign="top">
                                 <p class="p12">1.</p>
                             </td>
                             <td class="td19" valign="top">
-                                <p class="p11"><span class="s1">Mr. Rajesh Nimare</span></p>
+                                <p class="p11"><span class="s1">Subhajit Bhattacharya</span></p>
                             </td>
                             <td class="td20" valign="top">
-                                <p class="p11"><span class="s1">Assistant vice president, new product development at Secure Meters ltd </span></p>
+                                <p class="p11"><span class="s1">Senior Program Manager - Innovation & Strategic Programs at Accenture</span></p>
 
                                 <p class="p12"></p>
+                            </td>
+                            <td class="td16" valign="top">
+                                <p class="p11"><span class="s1">Business Centric Technologies and Augmented Reality</span></p>
                             </td>
                         </tr>
                         <tr>
@@ -416,10 +429,27 @@
                                 <p class="p12">2.</p>
                             </td>
                             <td class="td22" valign="top">
-                                <p class="p11"><span class="s1">Mr. B.L. Bishnoi</span></p>
+                                <p class="p11"><span class="s1">Utpal Chakraborty</span></p>
                             </td>
                             <td class="td23" valign="top">
-                                <p class="p11"><span class="s1">Head embedded design &amp; development group, </span><span class="s2">L&amp;t electrical &amp; automation </span></p>
+                                <p class="p11"><span class="s1">Head of Artificial Intelligence at YES BANK, Chief Data Scientist, AI Researcher, TEDx Speaker, Agile Lean Practitioner</span></p>
+                            </td>
+                            <td class="td16" valign="top">
+                                <p class="p11"><span class="s1">Perks of AI</span></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="td21" valign="top">
+                                <p class="p12">3.</p>
+                            </td>
+                            <td class="td22" valign="top">
+                                <p class="p11"><span class="s1">Ravinder Pal Singh</span></p>
+                            </td>
+                            <td class="td23" valign="top">
+                                <p class="p11"><span class="s1"></span></p>
+                            </td>
+                            <td class="td16" valign="top">
+                                <p class="p11"><span class="s1">Digital disruption and the need for its successful and sustainable advancement</span></p>
                             </td>
                         </tr>
                         </tbody>
@@ -431,31 +461,29 @@
 
                     <hr width="20%" /> <span class="s1">Smart Energy Systems</span><br />
                     <br />
-                    <span class="s1">Image Processing and Computer Vision-1</span><br />
+                    <span class="s1">Smart Solutions and Automation-I </span><br />
                     <br />
-                    <span class="s1">Smart Solutions and Automation: Smart City, Healthcare and Eco-friendly applications-1</span><br />
+                    <span class="s1">Network and Information Security</span><br />
                     <br />
-                    <span class="s1">Smart Solutions and Automation- Smart City, Healthcare and Eco-friendly applications-2</span><br />
+                    <span class="s1">Network and Communication -1</span><br />
                     <br />
-                    <span class="s1">Networks and Information Security</span><br />
+                    <span class="s1">Smart Solutions and Automation-II</span><br />
                     <br />
-                    <span class="s1">Communications: signal processing, wireless and antenna communication</span><br />
+                    <span class="s1"> Advanced Computing Model-1</span><br />
                     <br />
-                    <span class="s1">Advanced Computing Model -1</span><br />
-                    <br />
-                    <span class="s1">Advanced Computing Model -2</span><br />
+                    <span class="s1">Network and Communication -2 </span><br />
                     <br />
                     <span class="s1">Internet of Things: Mobility, Security, Access and Control</span><br />
                     <br />
-                    <span class="s1">Cyber Forensics</span><br />
+                    <span class="s1"> Advanced Computing Model-2</span><br />
                     <br />
-                    <span class="s1">Image Processing and Computer Vision-2</span><br />
+                    <span class="s1">Social Networks and Computer Vision</span><br />
                     <br />
                     &nbsp;
-                    <p class="p8"><span class="s1"><strong>VALEDICTORY NOTE</strong></span></p>
+                    <!-- <p class="p8"><span class="s1"><strong>VALEDICTORY NOTE</strong></span></p>
 
                     <hr width="20%" />
-                    <p class="p16"><font size="3"><span class="s1">Prof. Raj Sirohi, Chair Professor Tezpur University, Assam Ex-Director IIT-Delhi, VC of Barakhtulla University.</span></font></p>
+                    <p class="p16"><font size="3"><span class="s1">Prof. Raj Sirohi, Chair Professor Tezpur University, Assam Ex-Director IIT-Delhi, VC of Barakhtulla University.</span></font></p> -->
 
                     <p class="p8"><span class="s1"><strong>CERTIFICATE DISTRIBUTION IN VALEDICTOR FUNSTION</strong></span></p>
 
