important dates page

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
                                         <li><a href="coming-soon.html">Banking</a></li>
                                         <li><a href="coming-soon.html">Travel and Accommodation</a></li>
                                         <li><a href="coming-soon.html">E Visa</a></li>
+                                        <li><a href="importantdates.html">Important Dates</a></li>
                                     </ul>
                                 </li>
                             </ul>
