--- a/tpc.html
+++ b/tpc.html
@@ -133,6 +133,7 @@
                                         <li><a href="coming-soon.html">Banking</a></li>
                                         <li><a href="coming-soon.html">Travel and Accommodation</a></li>
                                         <li><a href="coming-soon.html">E Visa</a></li>
+                                        <li><a href="importantdates.html">Important Dates</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -173,7 +174,7 @@
         <div class="auto-container">
             <h1>Techincal Program Committee</h1>
             <ul class="bread-crumb clearfix">
-                <li><a target="__blank" href="index.html">Home</a></li>
+                <li><a target="__blank" href="index.html">Organisers</a></li>
                 <li>Techincal Program Committee</li>
             </ul>
         </div>
