--- a/evisa.html
+++ b/evisa.html
@@ -130,6 +130,7 @@
                                         <li><a style="color:blue" href="coming-soon.html">Banking</a></li>
                                         <li><a style="color:blue" href="coming-soon.html">Travel and Accommodation</a></li>
                                         <li><a style="color:blue" href="coming-soon.html">E Visa</a></li>
+                                        <li><a href="importantdates.html">Important Dates</a></li>
                                     </ul>
                                 </li>
                             </ul>
