--- a/importantdates.html
+++ b/importantdates.html
@@ -1,25 +1,25 @@
-﻿﻿<!DOCTYPE html>
-<html lang="en">
-<!-- Copied from https://expert-themes.com/html/eventrox/contact.html by Cyotek WebCopy 1.7.0.600, Thursday, September 19, 2019, 12:52:40 AM -->
+<!DOCTYPE html>
+ <html lang="en">
+<!-- Copied from https://expert-themes.com/html/eventrox/speakers.html by Cyotek WebCopy 1.7.0.600, Thursday, September 19, 2019, 12:52:40 AM -->
 <head>
-    <meta charset="utf-8">
+<meta charset="utf-8">
     <title>SSIC 2021 | Manipal University Jaipur</title>
-    <!-- Stylesheets -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/responsive.css" rel="stylesheet">
-    <!--Color Switcher Mockup-->
-    <link href="css/color-switcher-design.css" rel="stylesheet">
+<!-- Stylesheets -->
+<link target="__blank" href="css/bootstrap.css" rel="stylesheet">
+<link target="__blank" href="css/style.css" rel="stylesheet">
+<link target="__blank" href="css/responsive.css" rel="stylesheet">
+<!--Color Switcher Mockup-->
+<link target="__blank" href="css/color-switcher-design.css" rel="stylesheet">
 
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-    <link rel="icon" href="images/favicon.png" type="image/x-icon">
+<link rel="shortcut icon" target="__blank" href="images/favicon.png" type="image/x-icon">
+<link rel="icon" target="__blank" href="images/favicon.png" type="image/x-icon">
 
-    <!-- Responsive -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+<!-- Responsive -->
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-    <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
-    <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
+<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
+<!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
 
     <style>
         /*###Desktops, big landscape tablets and laptops(Large, Extra large)####*/
@@ -46,6 +46,9 @@
                 max-width: 50%;
                 height: auto !important;
             }
+        }
+        .height-fix {
+            height: 220px;
         }
     </style>
 
@@ -169,112 +172,73 @@
     <!--Page Title-->
     <section class="page-title" style="background-image:url(images/background/5.jpg);">
         <div class="auto-container">
-            <h1>Contact Us</h1>
+            <h1>Important Dates</h1>
             <ul class="bread-crumb clearfix">
-                <li><a href="index.html">Home</a></li>
-                <li>Contact Us</li>
+                <li><a target="__blank" href="index.html">Author Info.</a></li>
+                <li>Important Dates</li>
             </ul>
         </div>
     </section>
     <!--End Page Title-->
-
-    <!-- Contact Page Section -->
-    <section class="contact-page-section">
-        <div class="auto-container">
-            <div class="row clearfix">
-                <div class="contact-column col-lg-4 col-md-12 col-sm-12 order-2">
-                    <div class="inner-column">
-                        <div class="sec-title">
-                            <h2>Contact Info</h2>
-                        </div>
-                        <ul class="contact-info">
-                            <li>
-                                <span class="icon fa fa-map-marker-alt"></span>
-                                <p><strong>32, Breaking Street,</strong></p>
-                                <p>2nd cros, Newyork ,USA 10002</p>
-                            </li>
-
-                            <li>
-                                <span class="icon fa fa-phone-volume"></span>
-                                <p><strong>Call Us</strong></p>
-                                <p>+321 4567 89 012 & 79 023</p>
-                            </li>
-
-                            <li>
-                                <span class="icon fa fa-envelope"></span>
-                                <p><strong>Mail Us</strong></p>
-                                <p><a href="mailto:support@example.com">Support@example.com</a></p>
-                            </li>
-
-                            <li>
-                                <span class="icon fa fa-clock"></span>
-                                <p><strong>Opening Time</strong></p>
-                                <p>Mon - Sat: 09.00am to 18.00pm</p>
-                            </li>
-                        </ul>
-
-                        <ul class="social-icon-two social-icon-colored">
-                            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fab fa-google-plus"></i></a></li>
-                            <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                            <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <!-- Form Column -->
-                <div class="form-column col-lg-8 col-md-12 col-sm-12">
-                    <div class="inner-column">
-                        <div class="contact-form">
-                            <div class="sec-title">
-                                <h2>Get in Touch</h2>
-                            </div>
-                            <form method="post" action="sendemail.php" id="contact-form">
-                                <div class="row clearfix">
-                                    <div class="col-lg-6 col-md-6 col-sm-12 form-group">
-                                        <input type="text" name="username" placeholder="Name" required="">
-                                    </div>
-
-                                    <div class="col-lg-6 col-md-6 col-sm-12 form-group">
-                                        <input type="text" name="phone" placeholder="Phone" required="">
-                                    </div>
-
-                                    <div class="col-lg-6 col-md-6 col-sm-12 form-group">
-                                        <input type="email" name="email" placeholder="Email" required="">
-                                    </div>
-
-                                    <div class="col-lg-6 col-md-6 col-sm-12 form-group">
-                                        <input type="text" name="subject" placeholder="Subject" required="">
-                                    </div>
-
-                                    <div class="col-lg-12 col-md-12 col-sm-12 form-group">
-                                        <textarea name="message" placeholder="Message"></textarea>
-                                    </div>
-
-                                    <div class="col-lg-12 col-md-12 col-sm-12 form-group">
-                                        <button class="theme-btn btn-style-one" type="submit" name="submit-form"><span class="btn-title">Submit Now</span></button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <section class="speakers-section-two">
+        <div class="anim-icons">
+            <span class="icon icon-circle-4 wow zoomIn"></span>
+            <span class="icon icon-circle-3 wow zoomIn"></span>
         </div>
-    </section>
-    <!--End Contact Page Section -->
 
-    <!-- Map Section -->
-    <section class="map-section">
         <div class="auto-container">
-            <div class="map-outer">
-                <div class="map-canvas" data-zoom="12" data-lat="-37.817085" data-lng="144.955631" data-type="roadmap" data-hue="#ffc400" data-title="Envato" data-icon-path="images/icons/map-marker.png" data-content="Melbourne VIC 3000, Australia<br><a href='mailto:info@youremail.com'>info@youremail.com</a>">
-                </div>
+            <div class="sec-title text-center">
+                <span class="title">Author Info.</span>
+                <h2>Important Dates</h2>
             </div>
-        </div>
-    </section>
-    <!-- End Map Section -->
+        <table class="wow fadeInUp animated" data-wow-delay=".3s" style="width:100%">
+            <tbody>
+                <tr>
+                    <th>Event</th>
+                    <th>Date</th>
+                </tr>
+                
+                <tr>
+                    <td style="color: black">Call for Papers</td>
+                    <td>15th March 2020</td>
+                </tr>
+                <tr>
+                    <td style="color:black">Last Date of Paper submission</td>
+                    <td>15th June 2020</td>
+                </tr>
+                <tr>
+                    <td style="color:black">Notification of acceptance of papers</td>
+                    <td>30th September 2020</td>
+                </tr>
+                <tr>
+                    <td style="color:black">Last Date of Camera-Ready Paper Submission</td>
+                    <td>31st October 2020</td>
+                </tr>
+                <tr>
+                    <td style="color:black">Early Bird Registration</td>
+                    <td>15th October 2020</td>
+                </tr>
+                <tr>
+                    <td style="color:black">Last Date of Registration</td>
+                    <td>30th November 2020</td>
+                </tr>
+                <!-- <tr>
+                    <td style="color:black">Participant (non-author) early registration</td>
+                    <td>01 August &ndash; 31 August 2018</td>
+                </tr>
+                <tr>
+                    <td style="color:black">Participant (non-author) late registration</td>
+                    <td>01 September &ndash; 30 September 2018</td>
+                </tr>
+                <tr>
+                    <td style="color:black">Conference sessions</td>
+                    <td>18-20 January 2019</td>
+                </tr> -->
+            </tbody>
+        </table>
+    </div>
+</div>
+</section>
     <!-- Main Footer -->
     <footer class="main-footer">
         <!--Widgets Section-->
@@ -288,17 +252,17 @@
                             <div class="footer-column col-xl-7 col-lg-6 col-md-6 col-sm-12">
                                 <div class="footer-widget about-widget">
                                     <div class="logo">
-                                        <a href="index.html"><img src="images/logo_image-min.png" alt=""></a>
+                                        <a target="__blank" href="index.html"><img src="images/logo_image-min.png" alt=""></a>
                                     </div>
                                     <div class="text">
                                         <p>Smart Systems and Intelligent Computing is an international forum for researchers, engineers, academicians as well as industrial professionals from all over the world</p>
                                     </div>
                                     <!-- <ul class="social-icon-one social-icon-colored">
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
+                                        <li><a target="__blank" href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                                        <li><a target="__blank" href="#"><i class="fab fa-twitter"></i></a></li>
+                                        <li><a target="__blank" href="#"><i class="fab fa-pinterest"></i></a></li>
+                                        <li><a target="__blank" href="#"><i class="fab fa-youtube"></i></a></li>
+                                        <li><a target="__blank" href="#"><i class="fab fa-dribbble"></i></a></li>
                                     </ul> -->
                                 </div>
                             </div>
@@ -311,7 +275,7 @@
                                         <li><a href="index.html">Home</a></li>
                                         <li><a href="about-us.html">About Us</a></li>
                                         <li><a href="speakers.html">Speakers</a></li>
-                                        <li><a href="organizers.html">Committees</a></li>
+                                        <li><a href="organizers.html">Organizers</a></li>
                                         <li><a href="schedule.html">Schedule</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
@@ -333,12 +297,12 @@
                                         <ul class="contact-list">
                                             <li>
                                                 <span class="icon flaticon-phone"></span>
-                                                <div class="text"><a href="tel:+91-96676-04115">+91-96676-04115</a></div>
+                                                <div class="text"><a target="__blank" href="tel:+91-96676-04115">+91-96676-04115</a></div>
                                             </li>
 
                                             <li>
                                                 <span class="icon flaticon-paper-plane"></span>
-                                                <div class="text"><a href="mailto:ankit.mundra@muj.manipal.edu">ankit.mundra@muj.manipal.edu</a></div>
+                                                <div class="text"><a target="__blank" href="mailto:ankit.mundra@muj.manipal.edu">ankit.mundra@muj.manipal.edu</a></div>
                                             </li>
 
                                             <li>
@@ -358,27 +322,27 @@
                                     <div class="widget-content">
                                         <div class="outer clearfix">
                                             <figure class="image">
-                                                <a href="images/aboutJaipur/1.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/1.jpg" alt=""></a>
+                                                <a href="images/ssic2017/1.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/1.png" alt=""></a>
                                             </figure>
 
                                             <figure class="image">
-                                                <a href="images/aboutJaipur/2.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/2.jpg" alt=""></a>
+                                                <a href="images/ssic2017/2.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/2.png" alt=""></a>
                                             </figure>
 
                                             <figure class="image">
-                                                <a href="images/aboutJaipur/3.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/3.jpg" alt=""></a>
+                                                <a href="images/ssic2017/3.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/3.png" alt=""></a>
                                             </figure>
 
                                             <figure class="image">
-                                                <a href="images/aboutJaipur/4.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/4.jpg" alt=""></a>
+                                                <a href="images/ssic2017/4.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/4.png" alt=""></a>
                                             </figure>
 
                                             <figure class="image">
-                                                <a href="images/aboutJaipur/5.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/5.jpg" alt=""></a>
+                                                <a href="images/ssic2017/5.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/5.png" alt=""></a>
                                             </figure>
 
                                             <figure class="image">
-                                                <a href="images/aboutJaipur/1.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/6.jpg" alt=""></a>
+                                                <a href="images/ssic2017/6.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/6.png" alt=""></a>
                                             </figure>
                                         </div>
                                     </div>
@@ -415,5 +379,5 @@
         <!-- End Footer -->
 
 </body>
-<!-- Copied from https://expert-themes.com/html/eventrox/contact.html by Cyotek WebCopy 1.7.0.600, Thursday, September 19, 2019, 12:52:40 AM -->
+<!-- Copied from https://expert-themes.com/html/eventrox/speakers.html by Cyotek WebCopy 1.7.0.600, Thursday, September 19, 2019, 12:52:40 AM -->
 </html>
