adding some changes

--- a/organizers.html
+++ b/organizers.html
@@ -617,6 +617,7 @@
                         </div>
                     </div>
                 </div>
+               
 
                 <!-- Speaker Block -->
                 <div class="speaker-block-two col-lg-6 col-md-6 col-sm-12 wow fadeInUp">
@@ -631,6 +632,38 @@
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
                                 <li><a target="__blank" href="https://www.linkedin.com/in/drlalitgarg/"><i class="fab fa-linkedin-in"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="speaker-block-two col-lg-6 col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="inner-box height-fix">
+                        <div class="info-box">
+                            <h4 class="name"><a target="__blank" href="#">Manjit Kaur</a></h4>
+                            <span class="designation">Assitant Professor,Manipal University Jaipur</span>
+                        </div>
+                        <div class="image-box">
+                            <figure class="image"><a target="__blank" href="#"><img src="../ssic2021/images/speakers/manjit.jpeg" alt=""></a></figure>
+                        </div>
+                        <div class="social-box">
+                            <ul class="social-links social-icon-colored">
+                                <li><i class="fab fa-linkedin-in"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="speaker-block-two col-lg-6 col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="inner-box height-fix">
+                        <div class="info-box">
+                            <h4 class="name"><a target="__blank" href="#">Marcin Paprzycki</a></h4>
+                            <span class="designation">Associate Professor in the Systems Research Institute, Polish Academy of Sciences</span>
+                        </div>
+                        <div class="image-box">
+                            <figure class="image"><a target="__blank" href="#"><img src="../ssic2021/images/speakers/poland.jpeg" alt=""></a></figure>
+                        </div>
+                        <div class="social-box">
+                            <ul class="social-links social-icon-colored">
+                                <li><i class="fab fa-linkedin-in"></i></a></li>
                             </ul>
                         </div>
                     </div>
