--- a/index.html
+++ b/index.html
@@ -191,9 +191,23 @@
                 <span class="title">3<sup style="text-transform: lowercase">rd</sup> International Conference on</span>
                 <h2> Smart Systems:<br/>Innovations in<br/>Computing</h2>
                 <span class="title">22 - 23 January, 2021</span>
-                <figure class="image-box" style="margin-bottom: 60px;"><img src="images/springerhome.png" style="width:150px;" alt=""><a style="margin-top:10px;">&nbsp;&nbsp;&nbsp;(In process)</a></figure>
+                <figure class="image-box" style="margin-bottom: 30px;"><img src="images/springerhome.png" style="width:150px;" alt=""><a style="margin-top:10px;">&nbsp;&nbsp;&nbsp;(In process)</a></figure>
+                <div>Book Titles:
+                    <ol>
+                        <li>1. Smart Innovation, Systems and Technologies (SIST)</li>
+                        <li>2. Lecture Notes on Data Engineering and Communications Technologies</li>
+                    </ol>
+                </div>
+                <br><br>
                 <div class="time-counter"><div class="time-countdown clearfix" data-countdown="1/22/2021"></div></div>
-
+                <div>High quality or extended papers will be considered for publications in <br>Special Issues in following journals:<br>
+                    <ol>
+                        <li>1. International Journal of Information System Modeling and Design,<br>IGI Global Journal, Indexed by Scopus and ESCI. </li><br>
+                        <li>2. International Journal of Performability Engineering (IJPE),<br>(SCOPUS) Journal Web Page: http://www.ijpe-online.com/, Indexed by Scopus. 
+                            </li><br>
+                            <li>3. Multimedia Tools and Applications (SCI)[ SCI IF = 2.01, Springer].</li>
+                    </ol>
+                </div>
 <!--                <div class="btn-box"><a href="buy-ticket.html" class="theme-btn btn-style-two"><span class="btn-title">Book Now</span></a></div>-->
             </div>
         </div>
@@ -224,6 +238,16 @@
                             <div class="gallery-item col-md-6 col-sm-12 wow fadeIn" data-wow-delay="400ms">
                                 <div class="image-box">
                                     <figure class="image"><img src="images/speakers/deakin.png" style="height: 100px;width: 150px;" alt=""></figure>
+                                </div>
+                            </div>
+                            <div class="gallery-item col-md-6 col-sm-12 wow fadeIn" data-wow-delay="400ms">
+                                <div class="image-box">
+                                    <figure class="image"><img src="images/speakers/uni.jpeg" style="height: 100px;width: 150px;" alt=""></figure>
+                                </div>
+                            </div>
+                            <div class="gallery-item col-md-6 col-sm-12 wow fadeIn" data-wow-delay="400ms">
+                                <div class="image-box">
+                                    <figure class="image"><img src="images/speakers/panuni.jpeg" style="height: 100px;width: 150px;" alt=""></figure>
                                 </div>
                             </div>
                             <!-- Gallery Item -->
