photo nhi aa rhe

--- a/organizers.html
+++ b/organizers.html
@@ -643,7 +643,7 @@
                             <span class="designation">Assitant Professor,Manipal University Jaipur</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="../ssic2021/images/speakers/manjit.jpeg" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/speakers/manjit.jpeg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -659,7 +659,7 @@
                             <span class="designation">Associate Professor in the Systems Research Institute, Polish Academy of Sciences</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a target="__blank" href="#"><img src="../ssic2021/images/speakers/poland.jpeg" alt=""></a></figure>
+                            <figure class="image"><a target="__blank" href="#"><img src="images/speakers/poland.jpeg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
