--- a/index.html
+++ b/index.html
@@ -191,11 +191,11 @@
                 <span class="title">3<sup style="text-transform: lowercase">rd</sup> International Conference on</span>
                 <h2> Smart Systems:<br/>Innovations in<br/>Computing</h2>
                 <span class="title">22 - 23 January, 2021</span>
-                <figure class="image-box" style="margin-bottom: 30px;"><img src="images/springerhome.png" style="width:150px;" alt=""><a style="margin-top:10px;">&nbsp;&nbsp;&nbsp;(In process)</a></figure>
+                <figure class="image-box" style="margin-bottom: 30px;"><img src="images/springerhome.png" style="width:150px;" alt=""><a style="margin-top:10px;">&nbsp;&nbsp;&nbsp;</a></figure>
                 <div>Book Titles:
                     <ol>
-                        <li>1. Smart Innovation, Systems and Technologies (SIST)</li>
-                        <li>2. Lecture Notes on Data Engineering and Communications Technologies</li>
+                        <li>1.<a href="https://www.springer.com/series/8767">The volume “Smart Systems and IoT: Innovations in Computing” will be published in our book series “Smart Innovation, Systems and Technologies”.</a></li>
+                        <li>2. <a href="https://www.springer.com/series/15179">The volume “Data Engineering for Smart Systems” will be published in our book series “Lecture Notes in Networks and Systems”.</a></li>
                     </ol>
                 </div>
                 <br><br>
