--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
                 <figure class="image-box" style="margin-bottom: 30px;"><img src="images/springerhome.png" style="width:150px;" alt=""><a style="margin-top:10px;">&nbsp;&nbsp;&nbsp;</a></figure>
                 <div>Book Titles:
                     <ol>
-                        <li>1.<a href="https://www.springer.com/series/8767">The volume “Smart Systems and IoT: Innovations in Computing” will be published in our book series “Smart Innovation, Systems and Technologies”.</a></li>
-                        <li>2. <a href="https://www.springer.com/series/15179">The volume “Data Engineering for Smart Systems” will be published in our book series “Lecture Notes in Networks and Systems”.</a></li>
+                        <li>1. The volume <mark>“Smart Systems and IoT: Innovations in Computing”</mark> will be published<br> in our book series <a href="https://www.springer.com/series/8767">“Smart Innovation, Systems and Technologies”.</a></li>
+                        <li>2. The volume <mark>“Data Engineering for Smart Systems”</mark> will be published in our<br> book series  <a href="https://www.springer.com/series/15179">“Lecture Notes in Networks and Systems”.</a></li>
                     </ol>
                 </div>
                 <br><br>
