--- a/index.html
+++ b/index.html
@@ -1306,16 +1306,16 @@
 <!--Scroll to top-->
 <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-double-up"></span></div>
 <script src="js/jquery.js"></script>
-<script src="js/popper.min.js"></script>
+<script async src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<script src="js/jquery-ui.js"></script>
-<script src="js/jquery.fancybox.js"></script>
-<script src="js/jquery.countdown.js"></script>
-<script src="js/appear.js"></script>
-<script src="js/owl.js"></script>
+<script async src="js/jquery-ui.js"></script>
+<script async src="js/jquery.fancybox.js"></script>
+<script async src="js/jquery.countdown.js"></script>
+<script async src="js/appear.js"></script>
+<script async src="js/owl.js"></script>
 <script src="js/wow.js"></script>
 <script src="js/script.js"></script>
-        <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/bd0dc8955e053a2acfc5ae35a/7e21163d67bee9efec7c01637.js");</script>
+        <script async id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/bd0dc8955e053a2acfc5ae35a/7e21163d67bee9efec7c01637.js");</script>
 <!-- Color Setting -->
 <script src="js/color-settings.js"></script>
 </body>
