--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
     </div>
     <!-- Header span -->
 
-    <!-- Header Span -->
-    <span class="header-span"></span>
+    <!-- Header Span 
+    <span class="header-span"></span>-->
 
     <!-- Main Header-->
-    <header class="main-header header-style-two">
+    <header class="main-header header-style-two" style="background: #fff;">
         <div class="main-box">
             <div class="auto-container clearfix">
                 <div class="logo-box" id="logo">
