--- a/index.html
+++ b/index.html
@@ -192,21 +192,25 @@
                 <h2> Smart Systems:<br/>Innovations in<br/>Computing</h2>
                 <span class="title">22 - 23 January, 2021</span>
                 <figure class="image-box" style="margin-bottom: 30px;"><img src="images/springerhome.png" style="width:150px;" alt=""><a style="margin-top:10px;">&nbsp;&nbsp;&nbsp;</a></figure>
-                <div>Book Titles:
+                <div>All the accepted and presented papers will be published in following 
                     <ol>
-                        <li>1. The volume <mark>“Smart Systems and IoT: Innovations in Computing”</mark> will be published<br> in our book series <a href="https://www.springer.com/series/8767">“Smart Innovation, Systems and Technologies”.</a></li>
-                        <li>2. The volume <mark>“Data Engineering for Smart Systems”</mark> will be published in our<br> book series  <a href="https://www.springer.com/series/15179">“Lecture Notes in Networks and Systems”.</a></li>
+                        <li>1.&nbsp;<a href="https://www.springer.com/series/8767">Smart Innovation, Systems and Technologies</a></li>
+                        <li>2.&nbsp;<a href="https://www.springer.com/series/15179">Lecture Notes in Networks and Systems</a></li>
                     </ol>
                 </div>
                 <br><br>
                 <div class="time-counter"><div class="time-countdown clearfix" data-countdown="1/22/2021"></div></div>
-                <div>High quality or extended papers will be considered for publications in <br>Special Issues in following journals:<br>
+                <div>The few accepted high quality or extended papers will be recommended for possible<br>publication in Special Issues of following journals:
                     <ol>
-                        <li>1. International Journal of Information System Modeling and Design,<br>IGI Global Journal, Indexed by Scopus and ESCI. </li><br>
-                        <li>2. International Journal of Performability Engineering (IJPE),<br>(SCOPUS) Journal Web Page: http://www.ijpe-online.com/, Indexed by Scopus. 
-                            </li><br>
-                            <li>3. Multimedia Tools and Applications (SCI)[ SCI IF = 2.01, Springer].</li>
-                    </ol>
+                        <li>1.&nbsp;Machine and Deep learning based pattern recognition and computer vision<br>&nbsp;&nbsp;&nbsp;in the <a href="https://benthamopen.com/TOTJ/home/">The Open Transportation Journal</a></li>
+                        <li>2.&nbsp;Recent Advancements in Machine Learning Based Medical Imaging Applications<br>&nbsp;&nbsp;&nbsp;in the <a href="https://benthamscience.com/journals/current-medical-imaging/">Current Medical Imaging</a></li>
+                        <li>3.&nbsp;Special Issue on Computational Intelligence and Cognitive Systems in the<a href="https://benthamscience.com/journals/recent-advances-in-computer-science-and-communications/"> Recent<br>&nbsp;&nbsp;&nbsp;Advances in Computer Science and Communications</a></li>
+                        <li>4.&nbsp;<a href="https://www.springer.com/journal/11042">Multimedia Tools and Applications</a>, Springer Journal, Indexed by SCI IF = 2.101.</li>
+                        <li>5.&nbsp;<a href="https://www.igi-global.com/journal/international-journal-information-system-modeling/1157">International Journal of Information System Modeling and Design (IJISMD)</a>, IGI<br>&nbsp;&nbsp;&nbsp;Global Journal, Indexed by Scopus and ESCI.</li>
+                        <li>6.&nbsp;<a href="http://www.ijpe-online.com/">International Journal of Performability Engineering (IJPE),</a>, Indexed by Scopus.</li>
+
+                    
+                        </ol>
                 </div>
 <!--                <div class="btn-box"><a href="buy-ticket.html" class="theme-btn btn-style-two"><span class="btn-title">Book Now</span></a></div>-->
             </div>
